# sse-mitm

./: .gitignore  AGENTS.md  README.md  addon.py  config.json  install.sh  main.py  package.json  pyproject.toml  relay_server.py  run.sh  run_dev.sh
.githooks/: pre-commit
.github/workflows/: release.yml
docs/: 002-monorepo-migration.md  implementation-plan.md
mocks/: _example_full_mock.json  _example_inject_error.json  _example_slow_polling.json
scripts/: _common.sh  build_backend.sh  bump_version.sh  install.sh  run.sh  run_desktop.sh  run_dev.sh
src/: mock_loader.py  models.py  pipeline_runner.py  session.py  sse_client.py
src/handlers/: cert.py  config.py  relay.py  websocket.py
ui/: package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AutoForwardToggle.tsx  CertWarning.tsx  CodeBlock.tsx  EventEditor.tsx  EventRow.tsx  InjectModal.tsx  NetworkTab.tsx  RequestPreview.tsx  SessionDetail.tsx
ui/src/hooks/: useSessions.ts  useWebSocket.ts
ui/src/types/: index.ts
