[project]
name = "fpr-sse-mitm"
version = "0.1.0"
description = "mitmproxy-based SSE event debugger for QA"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "mitmproxy>=12.2.1",
    "pydantic>=2.0",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]
